syntax = "proto3";

package storage.pb;
option go_package = "storage/api;pb";
import "google/protobuf/timestamp.proto";


message Item {
  string name = 1;
  google.protobuf.Timestamp lastModified = 2;
  int64 size = 3;
  string storageClass = 4;
}

message GetFilesRequest {
  string profileId = 1;
  string appId = 2;
}

message UploadRequest {
  bytes content = 1;
  string fileName = 2;
  string profileId = 3;
  string appId = 4;
}

message GetFileContentResponse {
  bytes content = 1;
}

message DeleteRequest {
  string fileName = 1;
  string profileId = 2;
  string appId = 3;
}

message DownloadRequest {
  string fileName = 1;
  string profileId = 2;
  string appId = 3;
}

message GetACLRequest {
  string fileName = 1;
  string profileId = 2;
  string appId = 3;
}

message SetACLRequest {
  string fileName = 1;
  string profileId = 2;
  string appId = 3;
  int32 aclType = 4;
}

message GetFilesResponse {
  repeated Item data = 1;
}

message DownloadResponse {
  string url = 1;
}

message ACLResponse {
  string grantee = 1;
  string type = 2;
  string permission = 3;
}

message NothingResponse {}
