syntax = "proto3";

package storage.pb;
option go_package = "storage/api;pb";

import "google/api/annotations.proto";
import "storage/api/message.proto";

service storage {
  rpc GetFiles (GetFilesRequest) returns (GetFilesResponse) { // 获取桶内文件
    option (google.api.http) = {
      get: "/v1/storage/file/{appId}/{profileId}"
    };
  };
  rpc UploadFile (UploadRequest) returns (NothingResponse) { // 上传文件
    option (google.api.http) = {
      post: "/v1/storage/file/{appId}/{profileId}"
      body: "*"
    };
  };
  rpc DeleteFile (DeleteRequest) returns (NothingResponse) { // 删除对象
    option (google.api.http) = {
      delete: "/v1/storage/file/{appId}/{profileId}/{fileName}"
    };
  };
  rpc GetFileUrl (DownloadRequest) returns (DownloadResponse) { // 获取下载url
    option (google.api.http) = {
      get: "/v1/storage/url/{appId}/{profileId}/{fileName}"
    };
  };
  rpc GetFileContent (DownloadRequest) returns (GetFileContentResponse) { // 下载
    option (google.api.http) = {
      get: "/v1/storage/file/{appId}/{profileId}/{fileName}"
    };
  };
  rpc GetFileACL (GetACLRequest) returns (ACLResponse) { // 获取文件权限信息
    option (google.api.http) = {
      get: "/v1/storage/acl/{appId}/{profileId}/{fileName}"
    };
  };
  rpc SetFileACL (SetACLRequest) returns (NothingResponse) { // 设置文件权限
    option (google.api.http) = {
      put: "/v1/storage/acl"
      body: "*"
    };
  };
}
